--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/p5": "^1.7.0",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.4",
@@ -22,10 +23,11 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "nano-uuid": "^1.0.1",
     "p5": "^1.7.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
+    "uuid": "^9.0.0"
   }
 }
